@@ -12,6 +12,7 @@ Changes compared to ver 3.11.1
 - Added support for signing in web browser
 - Example projects for iOS and Android
 - Disable SHA1 support on signature creation
+- OCSP nonce compatibility with other digest info headers
 
 List API changes https://github.com/open-eid/libdigidocpp/wiki/API-changes-(v3.12)
 List of known issues: https://github.com/open-eid/libdigidocpp/wiki/Known-issues
